# SysOpy_HW

./: .gitignore
HW01/: CMakeLists.txt
HW01/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h
HW01/src/: CMakeLists.txt  main.c  main_dynamic.c
HW02/: CMakeLists.txt
HW02/task1/: CMakeLists.txt  lib_test.c  lib_test.h  main.c  sys_test.c  sys_test.h  wyniki.txt
HW02/task1/generator/: generator.c  generator.h  (+1 more)
HW02/task2/: CMakeLists.txt
HW02/task3/: CMakeLists.txt  file_lock.c  file_lock.h  main.c
HW03/: CMakeLists.txt
HW03/task1/: CMakeLists.txt  main.c  test_fork.c  test_fork.h
HW03/task2/: CMakeLists.txt
HW04/task1/: CMakeLists.txt  main.c
HW04/task2/: CMakeLists.txt
HW05/: CMakeLists.txt
HW05/task1/: main.c
HW05/task2/: CMakeLists.txt  client.c  server.c
HW05/task3/: CMakeLists.txt  main.c
HW06/: CMakeLists.txt
HW06/task1/: CMakeLists.txt  client.c  server.c
HW06/task2/: CMakeLists.txt  client.c  server.c
HW07/: CMakeLists.txt
HW07/task1/: CMakeLists.txt  consumer.c  producer.c  shared.c
HW07/task2/: CMakeLists.txt  reader.c  shared.c  writer.c
HW08/: CMakeLists.txt
HW08/task1/: CMakeLists.txt  generator.py
HW08/task1/v1/: main.c
HW08/task1/v2/: main.c
HW08/task1/v3/: main.c
HW08/task2/: CMakeLists.txt  division.c  signals.c  zad2.raport
HW09/: CMakeLists.txt
HW09/task1/: CMakeLists.txt  main.c
HW09/task2/: CMakeLists.txt  main.c
HW10/: CMakeLists.txt
HW10/task1/: CMakeLists.txt  client.c  massages.h  messages.h  server.c
HW10/task2/: CMakeLists.txt  client.c  massages.h  messages.h  server.c
(+18 files in other folders)
